# adboard

./: .coverage  .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_ENG.md  docker-compose.yml  dotenv_.py  logs.py  pull.exp  pull.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
__tests__/: README.md  pytest-logs.txt
__tests__/__fixtures__/: fixtures.py  playwrigth_fixture.py
__tests__/playwrigh/: test_page_of_invalid_ads.py  test_page_of_valid_ads.py  test_register_to_the_app.py  test_register_user_form_novalid.py  test_register_user_form_valid.py
__tests__/test_ads_views/: test_AsyncAds.py  test_get_sinfle_ad.py
__tests__/test_forms/: test_form_register.py
adboard/: api_urls.py  apps.py  binaries.py  hasher.py  models.py  urls.py  views.py
adboard/api_views/: token_vews.py  user_views.py
adboard/forms/: login.py  register.py  registr.py
adboard/serializers/: register.py
ads/: admin.py  api_urls.py  apps.py  create_graoups.py  ensure_db.py  models.py  serializers.py  urls.py  views.py
ads/api_views/: api_ads.py  api_ads_delete.py  api_files.py
ads/forms/: ad_creat.py
ads/migrations/: 0001_initial.py  0002_customuser_ad_user.py  0003_categorypath_remove_ad_category_remove_category_path.py  0008_alter_ad_user.py  (+16 more)
archive/: ТЗ_Python.docx
core/: storage.py
nginx/: Dockerfile  default.conf
project/: asgi.py  groups.py  settings.py  tokens.py  urls.py  urls_api.py  user_of_request.py
templates/: index.html
weather/: apps.py  models.py  urls.py  views.py
(+140 files in other folders)
